Fix launcher text alignment

--- a/src/Launcher.css
+++ b/src/Launcher.css
@@ -26,3 +26,7 @@
     height: 100%;
     width: 100%;
 }
+
+.app-shortcut-name {
+    text-align: center;
+}
